--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^17.0.32",
     "axios": "^0.27.2",
     "axios-cache-adapter": "^2.7.3",
+    "moment": "^2.29.3",
     "sqlite": "^4.1.1",
     "sqlite3": "^5.0.8",
     "tld-extract": "github:mfpopa/node-tld"
